--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -172,6 +172,10 @@
         gap: 0px;
     }
 
+    #About > div > div.container > div.traitsContainer > div:nth-child(n+0) > div {
+        background-color: transparent;
+    }
+
 
 }
 
