--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -27,7 +27,7 @@
                 border: 1.5px solid #E4E4E4;
 
                 &.dark {
-                    background-color: #111;
+                    background-color: #181818;
                     border: 1.5px solid #262626;
                 }
 
